--- a/index.html
+++ b/index.html
@@ -29,5 +29,42 @@
     
     <p class="mt-6 text-center text-sm text-gray-400">Aucun texte n'est stocké. 100% privé.</p>
   </div>
+
+  <!-- fonctionne très bien à ce niveau-là (hero) -->
+
+  <section id="seo-info" class="prose max-w-prose mx-auto mt-12">
+  <h2>Pourquoi utiliser ce compteur de caractères en ligne ?</h2>
+  <p>Notre outil vous offre un comptage instantané de :</p>
+  <ul>
+    <li>📌 Caractères (avec ou sans espaces)</li>
+    <li>📝 Nombre de mots</li>
+    <li>📄 Nombre de lignes</li>
+    <li>📏 Longueur moyenne des mots</li>
+    <li>🏆 Mot le plus long</li>
+  </ul>
+  <p>Utilisez-le pour ajuster vos <strong>balises title</strong> (≤ 60 caractères), <strong>meta descriptions</strong> (150 – 155 caractères), publications sur réseaux sociaux (Twitter, LinkedIn, Instagram), dissertations, emails ou fiches produit.</p>
+  <h3>À qui s’adresse cet outil ?</h3>
+  <p>Parfait pour :</p>
+  <ul>
+    <li>📚 Étudiants & enseignants</li>
+    <li>✍️ Rédacteurs web, community managers, SEO</li>
+    <li>👨‍💻 Développeurs ou traducteurs</li>
+    <li>📰 Journalistes ou auteurs</li>
+  </ul>
+  <h3>Fonctionnement & vie privée</h3>
+  <p>L’outil fonctionne 100 % dans votre navigateur — <strong>aucune donnée n’est envoyée ni stockée</strong>. Temps de chargement ultra rapide — résultat instantané.</p>
+  <h3>FAQ rapide</h3>
+  <dl>
+    <dt>Est-ce gratuit ?</dt>
+    <dd>Oui, sans inscription.</dd>
+    <dt>Mon texte est-il privé ?</dt>
+    <dd>100 % : il ne quitte jamais votre appareil.</dd>
+    <dt>Peut-on compter les caractères sans espaces ?</dt>
+    <dd>Oui, via la fonction dédiée (à développer si besoin).</dd>
+  </dl>
+</section>
+
+
+  
 </body>
 </html>
