--- a/index.html
+++ b/index.html
@@ -32,37 +32,46 @@
 
   <!-- fonctionne très bien à ce niveau-là (hero) -->
 
-  <section id="seo-info" class="prose max-w-prose mx-auto mt-12">
-  <h2>Pourquoi utiliser ce compteur de caractères en ligne ?</h2>
+<section class="mt-12 bg-white rounded-xl p-6 shadow-md text-gray-800 space-y-6 text-base leading-relaxed">
+  <h2 class="text-xl font-semibold text-gray-900">Pourquoi utiliser ce compteur de caractères en ligne ?</h2>
   <p>Notre outil vous offre un comptage instantané de :</p>
-  <ul>
+  <ul class="list-disc list-inside space-y-1">
     <li>📌 Caractères (avec ou sans espaces)</li>
     <li>📝 Nombre de mots</li>
     <li>📄 Nombre de lignes</li>
     <li>📏 Longueur moyenne des mots</li>
     <li>🏆 Mot le plus long</li>
   </ul>
-  <p>Utilisez-le pour ajuster vos <strong>balises title</strong> (≤ 60 caractères), <strong>meta descriptions</strong> (150 – 155 caractères), publications sur réseaux sociaux (Twitter, LinkedIn, Instagram), dissertations, emails ou fiches produit.</p>
-  <h3>À qui s’adresse cet outil ?</h3>
-  <p>Parfait pour :</p>
-  <ul>
+  <p>Utilisez-le pour ajuster vos <strong>balises title</strong> (≤ 60 caractères), <strong>meta descriptions</strong> (150–155 caractères), publications sur réseaux sociaux (Twitter, LinkedIn, Instagram), dissertations, emails ou fiches produit.</p>
+
+  <h3 class="text-lg font-semibold mt-6">À qui s’adresse cet outil ?</h3>
+  <ul class="list-disc list-inside space-y-1">
     <li>📚 Étudiants & enseignants</li>
     <li>✍️ Rédacteurs web, community managers, SEO</li>
     <li>👨‍💻 Développeurs ou traducteurs</li>
     <li>📰 Journalistes ou auteurs</li>
   </ul>
-  <h3>Fonctionnement & vie privée</h3>
+
+  <h3 class="text-lg font-semibold mt-6">Fonctionnement & vie privée</h3>
   <p>L’outil fonctionne 100 % dans votre navigateur — <strong>aucune donnée n’est envoyée ni stockée</strong>. Temps de chargement ultra rapide — résultat instantané.</p>
-  <h3>FAQ rapide</h3>
-  <dl>
-    <dt>Est-ce gratuit ?</dt>
-    <dd>Oui, sans inscription.</dd>
-    <dt>Mon texte est-il privé ?</dt>
-    <dd>100 % : il ne quitte jamais votre appareil.</dd>
-    <dt>Peut-on compter les caractères sans espaces ?</dt>
-    <dd>Oui, via la fonction dédiée (à développer si besoin).</dd>
-  </dl>
+
+  <h3 class="text-lg font-semibold mt-6">FAQ rapide</h3>
+  <div class="space-y-4">
+    <div>
+      <p class="font-medium">Est-ce gratuit ?</p>
+      <p>Oui, sans inscription ni limite.</p>
+    </div>
+    <div>
+      <p class="font-medium">Mon texte est-il privé ?</p>
+      <p>100 % : il ne quitte jamais votre appareil.</p>
+    </div>
+    <div>
+      <p class="font-medium">Peut-on compter les caractères sans espaces ?</p>
+      <p>Oui, via une mise à jour prochaine de l’outil.</p>
+    </div>
+  </div>
 </section>
+
 
 
   
