--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     }
   </script>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
-  <div class="bg-white shadow-xl rounded-2xl p-8 max-w-xl w-full">
+<body class="bg-gray-100 flex flex-col min-h-screen p-4">
+    <div class="bg-white shadow-xl rounded-2xl p-8 max-w-xl w-full flex-grow flex flex-col justify-center">
     <h1 class="text-2xl font-bold text-center mb-6">📝 Compteur de texte</h1>
     
     <textarea id="inputText" 
@@ -52,7 +52,7 @@
 
   <!-- fonctionne très bien à ce niveau-là (hero) -->
 
-<section class="mt-12 bg-white rounded-xl p-6 shadow-md text-gray-800 space-y-6 text-base leading-relaxed">
+  <section class="mt-12 bg-white rounded-xl p-6 shadow-md text-gray-800 space-y-6 text-base leading-relaxed max-w-xl w-full mx-auto">
   <h2 class="text-xl font-semibold text-gray-900">Pourquoi utiliser ce compteur de caractères en ligne ?</h2>
   <p>Notre outil vous offre un comptage instantané de :</p>
   <ul class="list-disc list-inside space-y-1">
@@ -91,9 +91,6 @@
     </div>
   </div>
 </section>
-
-
-
   
 </body>
 </html>
