--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" class="dark">
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,16 +7,21 @@
   <meta name="description" content="Comptez instantanément les caractères, mots, lignes et plus. Outil gratuit, rapide et 100% privé. Idéal pour rédacteurs, étudiants, développeurs et SEO." />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    // Thème clair/sombre basé sur la préférence utilisateur
-    const userPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    if (userPrefersDark) {
-      document.documentElement.classList.add('dark');
-    } else {
-      document.documentElement.classList.remove('dark');
-    }
+    // Détection du mode sombre
+    document.documentElement.classList.toggle(
+      "dark",
+      localStorage.theme === "dark" ||
+        (!("theme" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches),
+    );
 
     function toggleTheme() {
-      document.documentElement.classList.toggle('dark');
+      if (document.documentElement.classList.contains("dark")) {
+        document.documentElement.classList.remove("dark");
+        localStorage.theme = "light";
+      } else {
+        document.documentElement.classList.add("dark");
+        localStorage.theme = "dark";
+      }
     }
 
     function updateCount() {
