--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
 
   <section class="mt-12 max-w-3xl mx-auto bg-white dark:bg-gray-800 rounded-xl p-6 shadow-md text-base leading-relaxed">
-    <h2 class="text-xl font-semibold">Pourquoi utiliser ce compteur de texte en ligne ?</h2>
+    <h2 class="text-xl font-semibold">zPourquoi utiliser ce compteur de texte en ligne ?</h2>
     <p class="mt-2">Ce compteur de texte vous permet de connaître instantanément le nombre de caractères, mots, lignes, et autres statistiques utiles pour la rédaction de contenus professionnels ou académiques. Que vous soyez étudiant, rédacteur web, traducteur, développeur ou journaliste, cet outil vous fait gagner du temps en vous fournissant des données essentielles en un clin d'œil.</p>
 
     <p class="mt-4">Parfait pour optimiser :</p>
