--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Compteur de texte en ligne - Caractères, mots, statistiques</title>
+  <title>Compteur de caractères en ligne - Caractères, mots, statistiques</title>
   <meta name="description" content="Comptez instantanément les caractères, mots, lignes et plus. Outil gratuit, rapide et 100% privé. Idéal pour rédacteurs, étudiants, développeurs et SEO." />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -56,7 +56,7 @@
   <div class="max-w-xl w-full mx-auto flex-grow flex flex-col justify-center">
     <div class="bg-white dark:bg-gray-800 shadow-xl rounded-2xl p-8">
       <div class="flex justify-between items-center mb-4">
-        <h1 class="text-2xl font-bold">📝 Compteur de texte</h1>
+        <h1 class="text-2xl font-bold">📝 Compteur de caractères</h1>
       </div>
 
       <textarea id="inputText" class="w-full h-40 p-4 border rounded-xl resize-none focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-gray-700 dark:text-white" placeholder="Tapez ou collez votre texte ici..." oninput="updateCount()"></textarea>
@@ -75,14 +75,14 @@
   </div>
 
   <section class="mt-12 max-w-3xl mx-auto bg-white dark:bg-gray-800 rounded-xl p-6 shadow-md text-base leading-relaxed">
-    <h2 class="text-xl font-semibold">Pourquoi utiliser ce compteur de texte en ligne ?</h2>
-    <p class="mt-2">Ce compteur de texte vous permet de connaître instantanément le nombre de caractères, mots, lignes, et autres statistiques utiles pour la rédaction de contenus professionnels ou académiques. Que vous soyez étudiant, rédacteur web, traducteur, développeur ou journaliste, cet outil vous fait gagner du temps en vous fournissant des données essentielles en un clin d'œil.</p>
+    <h2 class="text-xl font-semibold">Pourquoi utiliser ce compteur de caractères en ligne ?</h2>
+    <p class="mt-2">Ce <strong>compteur de caractères</strong> vous permet de connaître instantanément le nombre de caractères, mots, lignes, et autres statistiques utiles pour la rédaction de contenus professionnels ou académiques. Que vous soyez étudiant, rédacteur web, traducteur, développeur ou journaliste, cet outil vous fait gagner du temps en vous fournissant des données essentielles en un clin d'œil.</p>
 
     <p class="mt-4">Parfait pour optimiser :</p>
     <ul class="list-disc list-inside">
-      <li>Les <strong>meta-descriptions</strong> pour le SEO</li>
-      <li>Les publications sur <strong>Twitter/X, LinkedIn, Instagram</strong></li>
-      <li>Les <strong>balises title</strong> de pages web</li>
+      <li>Les meta-descriptions pour le SEO</li>
+      <li>Les publications sur Twitter/X, LinkedIn, Instagram</li>
+      <li>Les balises title de pages web</li>
       <li>Les résumés de thèse ou de dissertation</li>
       <li>Les messages SMS, WhatsApp ou email</li>
     </ul>
