--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="max-w-xl w-full mx-auto flex-grow flex flex-col justify-center">
     <div class="bg-white dark:bg-gray-800 shadow-xl rounded-2xl p-8">
       <div class="flex justify-between items-center mb-4">
-        <h1 class="text-2xl font-bold">📝 Compteur de caractères</h1>
+        <h1 class="text-2xl font-bold">Compteur de caractères</h1>
       </div>
 
       <textarea id="inputText" class="w-full h-40 p-4 border rounded-xl resize-none focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-gray-700 dark:text-white" placeholder="Tapez ou collez votre texte ici..." oninput="updateCount()"></textarea>
