--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
       </div>
     </div>
   </section>
+
+    <footer class="mt-16 text-sm text-center text-gray-500 dark:text-gray-400 py-8 border-t border-gray-200 dark:border-gray-700">
+    <div class="flex flex-col items-center gap-2">
+      <p>&copy; 2025 Compteur de caractères en ligne. Tous droits réservés.</p>
+      <div class="flex gap-4">
+        <a href="mentions-legales" class="hover:underline">Mentions légales</a>
+        <a href="politique-confidentialite" class="hover:underline">Politique de confidentialité</a>
+      </div>
+    </div>
+  </footer>
   
 </body>
 </html>
