--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
   <main class="text-center space-y-6">
     <h1 class="text-6xl font-bold">404</h1>
     <p class="text-xl">Oups... La page que vous cherchez n'existe pas ou a été déplacée.</p>
-    <a href="/" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition dark:bg-blue-500 dark:hover:bg-blue-600">
-      Retour à l'accueil
+    <a href="compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition dark:bg-blue-500 dark:hover:bg-blue-600">
+      Retour au compteur de caractères
     </a>
   </main>
 </body>
