--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
   <meta name="description" content="La page demandée est introuvable." />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 flex items-center justify-center min-h-screen p-6">
+<body class="bg-gray-100 text-gray-800 flex items-center justify-center min-h-screen p-6">
   <main class="text-center space-y-6">
     <h1 class="text-6xl font-bold">404</h1>
     <p class="text-xl">Oups... La page que vous cherchez n'existe pas ou a été déplacée.</p>
-    <a href="compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition dark:bg-blue-500 dark:hover:bg-blue-600">
+    <a href="compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
       Retour au compteur de caractères
     </a>
   </main>
