--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Mentions légales du site Compteur de caractères - Informations sur l'éditeur, l'hébergement et la responsabilité du site." />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 p-8">
+<body class="bg-gray-100 text-gray-800 p-8">
   <main class="max-w-3xl mx-auto bg-white dark:bg-gray-800 p-8 rounded-xl shadow-lg space-y-6">
     <h1 class="text-3xl font-bold mb-4">Mentions légales</h1>
 
@@ -44,7 +44,7 @@
       <p>Ce site peut contenir des publicités dans le futur afin de soutenir son développement. Les contenus sponsorisés seront clairement identifiés. Le respect de la vie privée des utilisateurs reste une priorité.</p>
     </section>
 
-    <p class="text-sm text-gray-500 dark:text-gray-400 pt-6 border-t border-gray-200 dark:border-gray-700">Dernière mise à jour : juillet 2025</p>
+    <p class="text-sm text-gray-500 pt-6 border-t border-gray-200">Dernière mise à jour : juillet 2025</p>
   </main>
 </body>
 </html>
