--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Politique de confidentialité du site Compteur de caractères. Informations sur la gestion des données personnelles et des cookies." />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 p-8">
-  <main class="max-w-3xl mx-auto bg-white dark:bg-gray-800 p-8 rounded-xl shadow-lg space-y-6">
+<body class="bg-gray-100 text-gray-800 p-8">
+  <main class="max-w-3xl mx-auto bg-white p-8 rounded-xl shadow-lg space-y-6">
     <h1 class="text-3xl font-bold mb-6">Politique de confidentialité</h1>
 
     <section>
@@ -53,7 +53,7 @@
       <p>Pour toute demande relative à la vie privée ou à cette politique, vous pouvez nous contacter à l’adresse suivante : <em>(à compléter)</em></p>
     </section>
 
-    <footer class="pt-6 border-t border-gray-200 dark:border-gray-700 text-sm text-gray-500 dark:text-gray-400">
+    <footer class="pt-6 border-t border-gray-200 text-sm text-gray-500">
       <p>&copy; 2025 Eddy Abed-Royer. Tous droits réservés.</p>
     </footer>
   </main>
