--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 p-8">
-  <main class="max-w-3xl mx-auto bg-white dark:bg-gray-800 p-8 rounded-xl shadow-lg space-y-6">
+  <main class="max-w-3xl mx-auto bg-white p-8 rounded-xl shadow-lg space-y-6">
     <h1 class="text-3xl font-bold mb-4">Mentions légales</h1>
 
     <section>
