--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -57,7 +57,7 @@
       <p>&copy; 2025 Eddy Abed-Royer. Tous droits réservés.</p>
     </footer>
 
-    <a href="/" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
+    <a href="/compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
       Retour au compteur de caractères
     </a>
 
