--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <footer class="mt-16 text-sm text-center text-gray-500 py-8 border-t border-gray-200">
     <div class="flex flex-col items-center gap-2">
-      <p>&copy; 2025 Compteur de caractères en ligne. Tous droits réservés.</p>
+      <p>Outil créé avec ❤️</p>
       <div class="flex gap-4">
         <a href="mentions-legales" class="hover:underline">Mentions légales</a>
         <a href="politique-confidentialite" class="hover:underline">Politique de confidentialité</a>
