--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -60,7 +60,17 @@
     <a href="/compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
       Retour au compteur de caractères
     </a>
-
   </main>
+
+  <footer class="mt-16 text-sm text-center text-gray-500 py-8 border-t border-gray-200">
+    <div class="flex flex-col items-center gap-2">
+      <p>Outil créé avec ❤️</p>
+      <div class="flex gap-4">
+        <a href="mentions-legales" class="hover:underline">Mentions légales</a>
+        <a href="politique-confidentialite" class="hover:underline">Politique de confidentialité</a>
+      </div>
+    </div>
+  </footer>
+  
 </body>
 </html>
