--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -54,7 +54,7 @@
     </section>
 
     <a href="/compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
-      Retour au compteur de caractères
+      Compteur de caractères
     </a>
   </main>
 
