--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -46,7 +46,7 @@
 
     <p class="text-sm text-gray-500 pt-6 border-t border-gray-200">Dernière mise à jour : juillet 2025</p>
     <a href="/compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
-      Retour au compteur de caractères
+      Compteur de caractères
     </a>
   </main>
 
