--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <h1 class="text-6xl font-bold">404</h1>
     <p class="text-xl">Oups... La page que vous cherchez n'existe pas ou a été déplacée.</p>
     <a href="/compteur-caracteres" class="inline-block mt-4 px-6 py-3 text-white bg-blue-600 hover:bg-blue-700 rounded-lg shadow transition">
-      Retour au compteur de caractères
+      Compteur de caractères
     </a>
   </main>
 </body>
