--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <h3 class="text-lg font-semibold mt-6">Fonctionnalités clés :</h3>
     <ul class="list-disc list-inside">
-      <li>Calcul en temps réel des caractères (avec et sans espaces)</li>
+      <li>Calcul en temps réel du nombre de caractères (avec et sans espaces)</li>
       <li>Nombre de mots</li>
       <li>Nombre de lignes</li>
       <li>Longueur moyenne des mots</li>
@@ -92,7 +92,7 @@
     <div class="mt-4 space-y-4">
       <div>
         <p class="font-medium">Quelle est la différence entre le comptage avec et sans les espaces ?</p>
-        <p>Le comptage "avec espaces" inclut chaque caractère que vous tapez, y compris les lettres, les chiffres, la ponctuation et les espaces. Le comptage "sans espaces" exclut ces derniers. Cette distinction est cruciale car certaines plateformes (comme Google pour les balises SEO) comptent les espaces, tandis que d'autres contextes exigent un comptage sans.</p>
+        <p>Le comptage "avec espaces" inclut chaque caractère que vous tapez, y compris les lettres, les chiffres, la ponctuation et les espaces. Le comptage "sans espaces" exclut ces derniers. Cette distinction est cruciale car certaines plateformes (comme Google pour les balises SEO) comptent les espaces, tandis que d'autres contextes exigent un comptage sans. Ainsi, compter les caractères précisément est essentiel pour respecter les contraintes SEO et éditoriales.</p>
       </div>
       <div>
         <p class="font-medium">Votre compteur de mots est-il plus précis que Microsoft Word ?</p>
