--- a/index.html
+++ b/index.html
@@ -14,21 +14,18 @@
         <h1 class="text-2xl font-bold">Compteur de caractères</h1>
       </div>
 
-      <textarea id="inputText" class="w-full h-40 p-4 border rounded-xl resize-none focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Tapez ou collez votre texte ici..." oninput="updateCount()" maxlength="33000"></textarea>
-      <button onclick="clearTextarea()" class="absolute top-2 right-2 text-gray-400 hover:text-red-500" title="Effacer le texte">
-        &times;
-      </button>
-
+      <div>
+        <textarea id="inputText" class="w-full h-40 p-4 border rounded-xl resize-none focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Tapez ou collez votre texte ici..." oninput="updateCount()" maxlength="33000"></textarea>
         <div class="flex flex-1 justify-end">
-    <button type="button" class="-m-3 p-3 focus-visible:-outline-offset-4">
-      <span class="sr-only">Dismiss</span>
-      <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5 text-gray-900">
-        <path d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z" />
-      </svg>
-    </button>
-  </div>
+          <button onclick="clearTextarea()" title="Effacer le texte" type="button" class="-m-3 p-3 focus-visible:-outline-offset-4">
+            <span class="sr-only">Dismiss</span>
+            <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5 text-gray-900">
+            <path d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z" />
+            </svg>
+          </button>
+        </div>
+      </div>  
 
-      
       <div class="mt-6 space-y-2">
         <p>📌 Caractères (avec espaces) : <span id="charWithSpaces">0</span></p>
         <p>📌 Caractères (sans espaces) : <span id="charWithoutSpaces">0</span></p>
