--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div>
         <textarea id="inputText" class="w-full h-40 p-4 border rounded-xl resize-none focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Tapez ou collez votre texte ici..." oninput="updateCount()" maxlength="33000"></textarea>
-        <div class="flex flex-1 justify-end">
+        <div class="flex flex-1 justify-end hover:bg-gray-100">
           <button onclick="clearTextarea()" title="Effacer le texte" type="button" class="-m-3 p-3 focus-visible:-outline-offset-4">
             <span class="sr-only">Dismiss</span>
             <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5 text-gray-900">
