--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen p-4">
   <div class="h-screen max-w-xl w-full mx-auto flex-grow flex flex-col justify-center">
-    <div class="bg-white shadow-xl rounded-3xl p-8">
+    <div class="bg-white shadow-xl rounded-2xl p-8">
       <div class="flex justify-between items-center mb-4">
         <h1 class="text-2xl font-bold">Compteur de caractères</h1>
       </div>
 
       <div>
         <textarea id="inputText" class="w-full h-40 p-4 border rounded-xl resize-none focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Tapez ou collez votre texte ici..." oninput="updateCount()" maxlength="33000"></textarea>
-        <div class="flex flex-1 justify-end hover:bg-gray-100">
+        <div class="flex flex-1 justify-end hover:bg-gray-100 rounded-2xl">
           <button onclick="clearTextarea()" title="Effacer le texte" type="button" class="-m-3 p-3 focus-visible:-outline-offset-4">
             <span class="sr-only">Dismiss</span>
             <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5 text-gray-900">
