--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
       updateCount();
     }
 
+    window.onbeforeunload = function () {
+      window.scrollTo(0, 0);
+    }
+
   </script>
 
   
