--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <button onclick="copyToClipboard()" title="Copier le texte" type="button" class="absolute bottom-4 right-2 text-sm text-gray-700 bg-gray-100 hover:bg-gray-200 rounded-lg px-3 py-1 shadow-sm transition">
         <span class="inline-flex items-center">
-          <svg class="w-3 h-3 me-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
+          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
             <path d="M16 1h-3.278A1.992 1.992 0 0 0 11 0H7a1.993 1.993 0 0 0-1.722 1H2a2 2 0 0 0-2 2v15a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2Zm-3 14H5a1 1 0 0 1 0-2h8a1 1 0 0 1 0 2Zm0-4H5a1 1 0 0 1 0-2h8a1 1 0 1 1 0 2Zm0-5H5a1 1 0 0 1 0-2h2V2h4v2h2a1 1 0 1 1 0 2Z"/>
           </svg>
         <span class="text-xs font-semibold"></span>
