--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen p-4">
-  <div class="h-screen max-w-xl w-full mx-auto flex-grow flex flex-col justify-center">
+  <div class="h-screen max-w-3xl w-full mx-auto flex-grow flex flex-col justify-center">
     <div class="bg-white shadow-xl rounded-2xl p-8">
       <div class="flex justify-between items-center mb-4">
         <h1 class="text-2xl font-bold">Compteur de caractères</h1>
