--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Compteur de caractères en ligne - Caractères, mots, statistiques</title>
-  <meta name="description" content="Comptez instantanément les caractères, mots, lignes et plus. Outil gratuit, rapide et 100% privé. Idéal pour rédacteurs, étudiants, développeurs et SEO." />
+  <meta name="description" content="Comptez instantanément les caractères, mots, lignes et plus avec ce compteur de caractères. Outil gratuit, rapide et 100% privé. Idéal pour rédacteurs, étudiants, SEO." />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen p-4">
