--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Compteur de caractères en ligne - Caractères, mots, statistiques</title>
+  <title>Compteur de caractères en ligne - Caractères, mots, lignes</title>
   <meta name="description" content="Comptez instantanément les caractères, mots, lignes et plus avec ce compteur de caractères. Outil gratuit, rapide et 100% privé. Idéal pour rédacteurs, étudiants, SEO.">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -62,7 +62,7 @@
 
     <p class="mt-4">L'outil s'exécute entièrement dans votre navigateur, garantissant une expérience rapide et totalement privée. Aucune donnée n'est envoyée à un serveur distant. Il fonctionne aussi bien sur ordinateur que sur mobile ou tablette.</p>
 
-    <h3 class="text-lg font-semibold mt-6">Fonctionnalités clés :</h3>
+    <h2 class="text-lg font-semibold mt-6">Fonctionnalités clés :</h2>
     <ul class="list-disc list-inside">
       <li>Calcul en temps réel du nombre de caractères (avec et sans espaces)</li>
       <li>Nombre de mots</li>
@@ -72,7 +72,7 @@
       <li>Interface adaptée au thème sombre ou clair automatiquement</li>
     </ul>
 
-    <h3 class="text-lg font-semibold mt-6">Pour qui ?</h3>
+    <h2 class="text-lg font-semibold mt-6">Pour qui ?</h2>
     <ul class="list-disc list-inside">
       <li>📚 Étudiants & enseignants</li>
       <li>✍️ Rédacteurs web & consultants SEO</li>
@@ -81,29 +81,29 @@
       <li>📱 Professionnels des réseaux sociaux</li>
     </ul>
 
-    <h3 class="text-lg font-semibold mt-6">Confidentialité & performance</h3>
+    <h2 class="text-lg font-semibold mt-6">Confidentialité & performance</h2>
     <p>L'outil est entièrement gratuit, sans inscription ni publicité. Il respecte votre vie privée en ne stockant aucune information. Aucune connexion internet n'est requise une fois la page chargée… même en mode avion.</p>
 
-    <h3 class="text-xl font-semibold mt-10">Foire Aux Questions (FAQ)</h3>
+    <h2 class="text-xl font-semibold mt-10">Foire Aux Questions (FAQ)</h2>
     <div class="mt-4 space-y-4">
       <div>
-        <p class="font-medium">Quelle est la différence entre le comptage avec et sans les espaces ?</p>
+        <h3 class="font-medium">Quelle est la différence entre le comptage avec et sans les espaces ?</h3>
         <p>Le comptage "avec espaces" inclut chaque caractère que vous tapez, y compris les lettres, les chiffres, la ponctuation et les espaces. Le comptage "sans espaces" exclut ces derniers. Cette distinction est cruciale car certaines plateformes (comme Google pour les balises SEO) comptent les espaces, tandis que d'autres contextes exigent un comptage sans. Ainsi, compter les caractères précisément est essentiel pour respecter les contraintes SEO et éditoriales.</p>
       </div>
       <div>
-        <p class="font-medium">Votre compteur de mots est-il plus précis que Microsoft Word ?</p>
+        <h3 class="font-medium">Votre compteur de mots est-il plus précis que Microsoft Word ?</h3>
         <p>Notre outil utilise un algorithme conçu pour être extrêmement précis et peut différer légèrement de certains logiciels de traitement de texte. Par exemple, nous comptons les mots liés par un trait d'union (ex: "arc-en-ciel") comme un seul mot, ce qui correspond à l'usage courant en français et aux attentes de la plupart des plateformes en ligne. La précision est notre priorité.</p>
       </div>
       <div>
-        <p class="font-medium">Ce service est-il vraiment gratuit ?</p>
+        <h3 class="font-medium">Ce service est-il vraiment gratuit ?</h3>
         <p>Oui, à 100%. Notre compteur de caractères est entièrement gratuit, sans aucune fonctionnalité cachée ni abonnement requis. Notre objectif est de fournir le meilleur outil possible, accessible à tous.</p>
       </div>
       <div>
-        <p class="font-medium">Dois-je m'inscrire pour utiliser le compteur ?</p>
+        <h3 class="font-medium">Dois-je m'inscrire pour utiliser le compteur ?</h3>
         <p>Non. Aucune inscription n'est nécessaire. L'outil est accessible directement et de manière illimitée. Nous croyons en un accès simple et immédiat à l'information.</p>
       </div>
       <div>
-        <p class="font-medium">Mes textes sont-ils sauvegardés sur vos serveurs ?</p>
+        <h3 class="font-medium">Mes textes sont-ils sauvegardés sur vos serveurs ?</h3>
         <p>Absolument pas. Votre vie privée est notre priorité absolue. L'analyse de votre texte se fait directement dans votre navigateur. Aucun texte que vous collez dans notre outil n'est envoyé, stocké ou enregistré sur nos serveurs. Tout ce que vous écrivez reste votre propriété et disparaît dès que vous quittez la page.</p>
       </div>
     </div>
