--- a/index.html
+++ b/index.html
@@ -87,23 +87,23 @@
     <h2 class="text-xl font-semibold mt-10">Foire Aux Questions (FAQ)</h2>
     <div class="mt-4 space-y-4">
       <div>
-        <h3 class="font-medium">Quelle est la différence entre le comptage avec et sans les espaces ?</h3>
+        <h3 class="font-semibold">Quelle est la différence entre le comptage avec et sans les espaces ?</h3>
         <p>Le comptage "avec espaces" inclut chaque caractère que vous tapez, y compris les lettres, les chiffres, la ponctuation et les espaces. Le comptage "sans espaces" exclut ces derniers. Cette distinction est cruciale car certaines plateformes (comme Google pour les balises SEO) comptent les espaces, tandis que d'autres contextes exigent un comptage sans. Ainsi, compter les caractères précisément est essentiel pour respecter les contraintes SEO et éditoriales.</p>
       </div>
       <div>
-        <h3 class="font-medium">Votre compteur de mots est-il plus précis que Microsoft Word ?</h3>
+        <h3 class="font-semibold">Votre compteur de mots est-il plus précis que Microsoft Word ?</h3>
         <p>Notre outil utilise un algorithme conçu pour être extrêmement précis et peut différer légèrement de certains logiciels de traitement de texte. Par exemple, nous comptons les mots liés par un trait d'union (ex: "arc-en-ciel") comme un seul mot, ce qui correspond à l'usage courant en français et aux attentes de la plupart des plateformes en ligne. La précision est notre priorité.</p>
       </div>
       <div>
-        <h3 class="font-medium">Ce service est-il vraiment gratuit ?</h3>
+        <h3 class="font-semibold">Ce service est-il vraiment gratuit ?</h3>
         <p>Oui, à 100%. Notre compteur de caractères est entièrement gratuit, sans aucune fonctionnalité cachée ni abonnement requis. Notre objectif est de fournir le meilleur outil possible, accessible à tous.</p>
       </div>
       <div>
-        <h3 class="font-medium">Dois-je m'inscrire pour utiliser le compteur ?</h3>
+        <h3 class="font-semibold">Dois-je m'inscrire pour utiliser le compteur ?</h3>
         <p>Non. Aucune inscription n'est nécessaire. L'outil est accessible directement et de manière illimitée. Nous croyons en un accès simple et immédiat à l'information.</p>
       </div>
       <div>
-        <h3 class="font-medium">Mes textes sont-ils sauvegardés sur vos serveurs ?</h3>
+        <h3 class="font-semibold">Mes textes sont-ils sauvegardés sur vos serveurs ?</h3>
         <p>Absolument pas. Votre vie privée est notre priorité absolue. L'analyse de votre texte se fait directement dans votre navigateur. Aucun texte que vous collez dans notre outil n'est envoyé, stocké ou enregistré sur nos serveurs. Tout ce que vous écrivez reste votre propriété et disparaît dès que vous quittez la page.</p>
       </div>
     </div>
