--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       <li>Longueur moyenne des mots</li>
       <li>Mot le plus long</li>
       <li>Interface adaptée au thème sombre ou clair automatiquement</li>
+      <li>Bouton de suppression ou de copie du texte analysé</li>
     </ul>
 
     <h2 class="text-lg font-semibold mt-6">Pour qui ?</h2>
